objects/Utterance_Log__c.object
<CustomObject>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Utterance Log</relationshipLabel>
        <relationshipName>Utterance_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Utterance__c</fullName>
        <label>Current Utterance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utterance_Log__c</fullName>
        <label>Utterance Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Utterance Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utterance Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>